<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginBottom="0dp"
    android:layout_marginTop="200dp">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="80dp">

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            card_view:cardBackgroundColor="#eeeeee"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="5dp">

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="-50dp"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textViewCompoundsName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:maxLines="4"
                    android:paddingTop="20dp"
                    android:text="@string/activity_property_card_view_compound_name"
                    android:textColor="#307be1"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewCompoundsFormula"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textViewCompoundsName"
                    android:layout_marginTop="8dp"
                    android:text="@string/activity_property_card_view_compound_formula"
                    android:textColor="#333"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textViewCompoundsMass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textViewCompoundsFormula"
                    android:layout_marginTop="8dp"
                    android:text="@string/activity_property_card_view_compound_mass"
                    android:textColor="#333"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textViewCompoundsCid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textViewCompoundsMass"
                    android:layout_marginTop="8dp"
                    android:text="@string/activity_property_card_view_compound_cid"
                    android:textColor="#333"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/saveDataToRealm"
                    android:layout_width="100dp"
                    android:layout_height="55dp"
                    android:background="@null"
                    android:layout_alignRight="@id/textViewCompoundsName"
                    android:layout_below="@id/textViewCompoundsName"
                    android:text="@string/activity_property_button_save_override" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <EditText
            android:id="@+id/typeStorePlace"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/cardView"
            android:layout_centerVertical="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/edit_texts"
            android:ellipsize="start"
            android:gravity="center"
            android:hint="@string/activity_property_hint_add_storage"
            android:drawableLeft="@drawable/ic_storage_black_24dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="80dp">

        <ImageView
            android:id="@+id/imageViewCompoundsPNG"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:layout_below="@+id/typeStorePlace"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            app:srcCompat="@mipmap/ic_launcher_round"
            android:adjustViewBounds= "true"
            tools:ignore="NotSibling" />


    </RelativeLayout>



</LinearLayout>