<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"

        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/cardView_medium_layout_margin"
        android:layout_marginTop="@dimen/cardView_medium_layout_marginTop"
        card_view:cardBackgroundColor="#eeeeee"
        card_view:cardCornerRadius="@dimen/cardView_medium_cardCornerRadius"
        card_view:cardElevation="@dimen/cardView_medium_cardElevation">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/cardView_RelativeLayout_medium_padding">

            <TextView
                android:id="@+id/textViewCompoundsName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/textViewCompoundsName_medium_layout_marginTop"
                android:paddingTop="@dimen/textViewCompoundsName_layout_paddingTop"
                android:text="@string/activity_property_card_view_compound_name"
                android:textColor="#307be1"
                android:textSize="@dimen/textViewCompoundsName_textSize" />

            <TextView
                android:id="@+id/textViewCompoundsFormula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewCompoundsName"
                android:layout_marginTop="@dimen/textViewCompoundsFormula_medium_layout_marginTop"
                android:text="@string/activity_property_card_view_compound_formula"
                android:textColor="#333"
                android:textSize="@dimen/textViewCompoundsFormula_textSize" />

            <TextView
                android:id="@+id/textViewCompoundsMass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewCompoundsFormula"
                android:layout_marginTop="@dimen/textViewCompoundsMass_medium_layout_marginTop"
                android:text="@string/activity_property_card_view_compound_mass"
                android:textColor="#333"
                android:textSize="@dimen/textViewCompoundsMass_textSize" />

            <TextView
                android:id="@+id/textViewCompoundsCid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewCompoundsMass"
                android:layout_marginTop="@dimen/textViewCompoundsCid_medium_layout_marginTop"
                android:text="@string/activity_property_card_view_compound_cid"
                android:textColor="#333"
                android:textSize="@dimen/textViewCompoundsCid_textSize" />

            <Button
                android:id="@+id/saveDataToRealm"
                android:layout_width="@dimen/button_saveDataToRealm_width_medium"
                android:layout_height="@dimen/button_saveDataToRealm_height_medium"
                android:layout_alignRight="@id/textViewCompoundsName"
                android:layout_below="@id/textViewCompoundsName"
                android:background="@null"
                android:textSize="@dimen/button_saveDataToRealm_textSize"
                android:text="@string/activity_property_button_save_override" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <EditText
        android:id="@+id/typeStorePlace"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_typeStorePlace_height_medium"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/cardView"
        android:layout_centerVertical="true"
        android:layout_marginBottom="@dimen/button_typeStorePlace_height_medium_marginBottom"
        android:layout_marginLeft="@dimen/button_typeStorePlace_height_medium_marginLeft"
        android:layout_marginRight="@dimen/button_typeStorePlace_height_medium_marginRight"
        android:layout_marginTop="@dimen/button_typeStorePlace_height_medium_marginTop"
        android:background="@drawable/edit_texts"
        android:drawableLeft="@drawable/ic_storage_black_24dp"
        android:ellipsize="start"
        android:textSize="@dimen/button_typeStorePlace_textSize"
        android:gravity="center"
        android:hint="@string/activity_property_hint_add_storage"
        android:maxLines="8" />

    <ImageView
        android:id="@+id/imageViewCompoundsPNG"
        android:layout_width="@dimen/imageViewCompoundsPNG_width_medium"
        android:layout_height="@dimen/imageViewCompoundsPNG_height_medium"
        android:layout_below="@+id/typeStorePlace"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/imageViewCompoundsPNG_medium_marginBottom"
        android:layout_marginTop="@dimen/imageViewCompoundsPNG_medium_marginTop"
        android:gravity="center_vertical"
        app:srcCompat="@mipmap/ic_launcher_round"
        tools:ignore="NotSibling" />


</RelativeLayout>