<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="0dp"
    android:layout_marginTop="200dp">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="5dp">

                <Button
                    android:id="@+id/activity_backup_drive_button_backup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="12dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:background="@drawable/buttons"
                    android:padding="16dp"
                    android:text="@string/activity_backup_drive_button_backup"
                    android:textColor="#80000000" />


                <LinearLayout
                    android:id="@+id/activity_backup_drive_button_folder"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/buttons"
                    android:orientation="horizontal"
                    android:paddingTop="8dp">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/activity_backup_drive_folder"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/activity_backup_drive_textview_folder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:gravity="right"
                        android:paddingRight="16dp"
                        android:text="@string/activity_backup_drive_folder_not_set" />
                </LinearLayout>

                <TextView
                    android:id="@+id/activity_backup_drive_button_manage_drive"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/buttons"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/activity_backup_drive_button_open_drive"
                    android:textAllCaps="true"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:gravity="center"
                    android:text="@string/activity_backup_drive_recent"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.github.paolorotolo.expandableheightlistview.ExpandableHeightListView

                android:id="@+id/activity_backup_drive_listview_restore"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:dividerHeight="10.0sp">

            </com.github.paolorotolo.expandableheightlistview.ExpandableHeightListView>
        </ScrollView>

    </RelativeLayout>

</LinearLayout>